--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <a class="navegador_a" href="#">Inicio</a>
                 <a class="navegador_a" href="#">Nosotros</a>
-                <a class="navegador_a" href="#">Perros</a>
+                <a class="navegador_a" href="PERROS.HTML">Perros</a>
                 <a class="navegador_a" href="#">Gatos</a>
                 <a class="navegador_a" href="#">Contactos</a>
 
