--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   Mascotas
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Perros</a></li>
+                  <li><a class="dropdown-item" href="PERRO.html">Perros</a></li>
                   <li><a class="dropdown-item" href="#">Gatos</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item disabled" href="#">Ayuda a un Peludo</a></li>
