--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <img src="resource/perro.bmp" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ayuda a un Perro</h5>
-                  <a href="#" class="btn btn-primary">Ver Todos</a>
+                  <a href="PERRO.html" class="btn btn-primary">Ver Todos</a>
                 </div>
             </div>
 
