--- a/PERRO.html
+++ b/PERRO.html
@@ -26,28 +26,28 @@
      <div class="contenedor-lg">
         <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
             <div class="col-xs-12 col-log-6 ">
-                <img src="Quiltro.jpg" alt="perro 1" class="rounded d-block" >
+                <img src="Quiltro.jpg img_perro" alt="perro 1" class="rounded d-block" >
                 <h4>Mestizo</h4>
                 
             </div>
             <div class="col alinear">
-                <img src="1-155.jpg" alt="perro 2" class="rounded">
+                <img src="1-155.jpg " alt="perro 2" class="rounded img_perro">
                 <h4>Mestizo</h4>
             </div>
             <div class="col alinear3">
-                <img src="Aviavlad-Pixabayjpg.jpg" alt="perro 3" class="rounded">
+                <img src="Aviavlad-Pixabayjpg.jpg" alt="perro 3" class="rounded img_perro">
                 <h4>Mestizo</h4>
             </div>
             <div class="col alinear4">
-                <img src="perrito.jpg" alt="perro 4" class="rounded">
+                <img src="perrito.jpg" alt="perro 4" class="rounded img_perro">
                 <h4>Mestizo</h4>
             </div>
             <div class="col alinear5">
-                <img src="Quiltro.jpg" alt="perro 5" class="rounded ">
+                <img src="Quiltro.jpg" alt="perro 5" class="rounded img_perro ">
                 <h4>Mestizo</h4>
             </div>
             <div class="col alinear">
-                <img src="Quiltro.jpg" alt="perro 6" class="rounded ">
+                <img src="Quiltro.jpg" alt="perro 6" class="rounded img_perro ">
                 <h4>Mestizo</h4>
             </div>
             
