--- a/PERRO.html
+++ b/PERRO.html
@@ -26,7 +26,7 @@
      <div class="contenedor-lg">
         <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
             <div class="col-xs-12 col-log-6 ">
-                <img src="Quiltro.jpg img_perro" alt="perro 1" class="rounded d-block" >
+                <img src="Quiltro.jpg" alt="perro 1" class="rounded d-block img_perro" >
                 <h4>Mestizo</h4>
                 
             </div>
