--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Nosotros</a>
+                <a class="nav-link" href="#id_nosotros" tabindex="-1" aria-disabled="true">Nosotros</a>
               </li>
             
               <li class="nav-item dropdown">
@@ -32,7 +32,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="PERRO.html">Perros</a></li>
-                  <li><a class="dropdown-item" href="#">Gatos</a></li>
+                  <li><a class="dropdown-item" href="GATO.html">Gatos</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item disabled" href="#">Ayuda a un Peludo</a></li>
                 </ul>
@@ -87,7 +87,7 @@
    
     </div>
 
-        <h2 class="nosotros_titulo">Nosotros</h2>
+        <h2 class="titulo_modelo" id="id_nosotros">Nosotros</h2>
 
         <div class="row">
 
@@ -178,7 +178,7 @@
                 <img src="resource/gato.bmp" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ayuda a un Gato</h5>
-                  <a href="#" class="btn btn-primary">Ver Todos</a>
+                  <a href="GATO.html" class="btn btn-primary">Ver Todos</a>
                 </div>
             </div>
 
