--- a/PERRO.html
+++ b/PERRO.html
@@ -38,6 +38,9 @@
                   <li><a class="dropdown-item disabled" href="#">Ayuda a un Peludo</a></li>
                 </ul>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="formulario.html" tabindex="-1" aria-disabled="true">Formulario</a>
+              </li>
               
               <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">"Una gran acción puede generar un gran cambio"</a>
